<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileGTL</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">GTL - Login</string>
    <string name="username">Usuario</string>
    <string name="password">Password</string>
    <string name="Login">Ingresar</string>
    <string name="title_activity_user_home">GTL</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="lblInputCliente">Cliente:</string>
	<string name="lblInputProveedor">Proveedor:</string>
	<string name="lblInputCuenta">Ingrese una Cuenta</string>
	<string name="txtBuscar">Buscar</string>
	<string name="txtMovimientos">Movimientos</string>
	<string name="title_pagos">PAGOS</string>
	<string name="title_NC">NOTAS DE CRÉDITO</string>
	<string name="title_Cheques">CHEQUES</string>
	<string name="title_totales">TOTALES</string>
	<string name="title_transf">TRANSF. BANCARIA</string>
	<string name="title_piezas">PIEZAS</string>
	<string name="title_clientes">CLIENTES</string>
	<string name="title_proveedores">PROVEEDORES</string>
	
	
	<string name="title_cons_fc">FACTURA</string>
	<string name="title_cons_nd">NOTA DE DÉBITO</string>
	<string name="title_cons_nc">NOTA DE CRÉDITO</string>
	<string name="title_cons_re">REMITO DE ENTRADA</string>
	<string name="title_cons_rs">REMITO DE SALIDA</string>
	<string name="title_cons_rc">RECIBO</string>
	<string name="title_cons_odp">ORDEN DE PAGO</string>
	<string name="title_cons_ch">CHEQUE</string>
	
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="red">#FF0000</color>

    <string-array name="modulos_app">
        <item>Usuario: </item>
        <item>Cuentas Clientes</item>
        <item>Cuentas Proveedor</item>
        <item>Consultas</item>
    </string-array>

    <string-array name="cantidad_movimientos">
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_cc">CCActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>