<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginTop="18dp"
        android:text="@string/login_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/textfield_shape"
        android:layout_below="@+id/textView1"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:hint="@string/username"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/editText1"
        android:background="@drawable/textfield_shape"
        android:layout_marginTop="5dp"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:background="@drawable/button_shape"
        android:layout_marginTop="10dp"
        android:onClick="login"
        android:textColor="@color/white"
        android:text="@string/Login" />

</RelativeLayout>