<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scroll_consultas"
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:fillViewport="true"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/consultas_internal_scroll_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/title_clientes"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/consultas_btn_factura"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_shape"
                    android:tag="1"
                    android:text="@string/title_cons_fc"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/consultas_btn_nd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_shape"
                    android:tag="2"
                    android:text="@string/title_cons_nd"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/consultas_btn_nc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_shape"
                    android:tag="4"
                    android:text="@string/title_cons_nc"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/consultas_btn_rc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_shape"
                    android:tag="3"
                    android:text="@string/title_cons_rc"
                    android:textColor="@color/white" />
            </TableRow>

<!--             <TableRow -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" > -->

<!--                 <Button -->
<!--                     android:id="@+id/consultas_btn_re" -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_marginLeft="5dp" -->
<!--                     android:layout_marginRight="5dp" -->
<!--                     android:layout_marginTop="5dp" -->
<!--                     android:background="@drawable/button_shape" -->
<!--                     android:tag="7" -->
<!--                     android:text="@string/title_cons_re" -->
<!--                     android:textColor="@color/white" /> -->
<!--             </TableRow> -->

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/consultas_btn_rs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_shape"
                    android:tag="8"
                    android:text="@string/title_cons_rs"
                    android:textColor="@color/white" />
            </TableRow>
            
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/consultas_btn_ch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_shape"
                    android:tag="6"
                    android:text="@string/title_cons_ch"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/black" 
                    android:layout_marginTop="25sp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/title_proveedores"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

<!--             <TableRow -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" > -->

<!--                 <Button -->
<!--                     android:id="@+id/consultas_btn_factura_p" -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_marginLeft="5dp" -->
<!--                     android:layout_marginRight="5dp" -->
<!--                     android:layout_marginTop="5dp" -->
<!--                     android:background="@drawable/button_shape" -->
<!--                     android:text="@string/title_cons_fc" -->
<!--                     android:textColor="@color/white" /> -->
<!--             </TableRow> -->

<!--             <TableRow -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" > -->

<!--                 <Button -->
<!--                     android:id="@+id/consultas_btn_nd_p" -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_marginLeft="5dp" -->
<!--                     android:layout_marginRight="5dp" -->
<!--                     android:layout_marginTop="5dp" -->
<!--                     android:background="@drawable/button_shape" -->
<!--                     android:text="@string/title_cons_nd" -->
<!--                     android:textColor="@color/white" /> -->
<!--             </TableRow> -->

<!--             <TableRow -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" > -->

<!--                 <Button -->
<!--                     android:id="@+id/consultas_btn_nc_p" -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_marginLeft="5dp" -->
<!--                     android:layout_marginRight="5dp" -->
<!--                     android:layout_marginTop="5dp" -->
<!--                     android:background="@drawable/button_shape" -->
<!--                     android:text="@string/title_cons_nc" -->
<!--                     android:textColor="@color/white" /> -->
<!--             </TableRow> -->

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/consultas_btn_odp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_shape"
                    android:tag="5"
                    android:text="@string/title_cons_odp"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>